		magnitude units
	- Use json format for traceid correction file
	- Save config file to output dir (only for source_spec)
	- Save run completion time into output file
	- Logarithmic average and logarithmic (asymmetric) error bars for Mo, fc
		and source radius
	- Computation of radiated energy
	- Station-specific filters
	- New parameters: gap_max, overlap_max
	- Add event information, code version and run completion time to plots
	- Multifigure plotting for traces and spectra (for large number of stations)
	- New option to plot a station map, color-coded by station magnitude
		(requires Cartopy)
	- Refactoring of local magnitude computation code:
		- Wood-Anderson amplitude is computed from the whole trace converted
			to W-A and not converting only the min and max peaks (which is
			the default in ObsPy)
		- Trace windowing is computed on HF envelopes
		- New option for custom Ml coefficients
		- Remove unnecessary Ml options
	- Code cleaning and optimization:
		- Switch from optparse (deprecated) to argparse
		- Code style fixes and refactoring
	- BUGFIX: Fix a major bug in reading hypo pick file
	- BUGFIX: Fix for pick file not read in source_model
v0.8 - 2014-07-11
	- Trace plot showing S and noise time windows
	- Improved handling of paz files
	- Per-station Mo on output file
	- Code cleaning and optimization
v0.7 - 2014-04-07
	- Code reorganization:
		- inversion code split to its own functions
	- Option to use bounded inversion
	- Station residuals, through ssp_residuals.py
	- source_model can now output tables of trade-off
		between parameters
	- Fix in the way noise trace is computed and processed
	- Documentation!
v0.6 - 2013-06-05 - Several improvements:
	- Signal to noise weighting
	- Improved local magnitude computation
	- New options:
		- time domain integration
		- vertical component
	- Largely improved plotting function
	- More data formats supported (Antilles, IPOC)
	- source_model: a code for plotting theoretical spectra
	- Code refactoring